--- a/application/index/view/home/teacheronline.html
+++ b/application/index/view/home/teacheronline.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-<!--刘宇轩-->
-<!--2019.07.19 14:55-->
-
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}微课堂-管理员模式{/block}</title>
+    <title>微课堂-梦云智出品</title>
     <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
@@ -30,13 +27,27 @@
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
+        <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">微课堂</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav ">
-              <li class="active"><a href="http://localhost/microCourse/public/index.php/index/home/teacherpage">首页 <span class="sr-only">(current)</span></a></li>
-              <!--是这个标签是当前标签 -->
+            	<li><a href="http://localhost/microCourse/public/index.php/index/home/teacherpage">首页</a></li>
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teachercourse">课程管理</a></li>
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teacherclassroom">教室管理</a></li>
-              <li><a href="http://localhost/microCourse/public/index.php/index/home/teacheronline">上课模式</a></li>
+              <li class="active"><a href="http://localhost/microCourse/public/index.php/index/home/teacheronline">上课模式<span class="sr-only">(current)</span></a></li>
+              <!--是这个标签是当前标签 -->
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teachergrade">成绩录入</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -70,94 +81,11 @@
       <div class="col-md-12">
             {block name="search"}
             <hr />
-              <div class="jumbotron">
-                  <h1>Hello, world!</h1>
-                  <p>...</p>
-                  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-              </div>
-              <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
-              <h3>当前学期:</h3>
-              <div class="dropdown">
-                <h4>选择周次:</h4>
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  第一周
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#">第一周</a></li>
-                  <li><a href="#">第二周</a></li>
-                  <li><a href="#">第三周</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">......</a></li>
-                </ul>
-              </div> 
-              <br><br>
-            <table class="table table-bordered">
-                <tr class="info">
-                  <th>周次</th>
-                  <th>第一节</th>
-                  <th>第二节</th>
-                  <th>第三节</th>
-                  <th>第四节</th>
-                  <th>第五节</th>
-                </tr>
-                <tr>
-                  <td>星期一</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                 <tr>
-                  <td>星期二</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>星期三</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>星期四</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>星期五</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>星期六</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>星期日</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>    
-            </table>
+              
+              <div class="alert alert-success" role="alert">当前状态：系统运行正常</div>
+              <h3>当前时间：X年X月X日&nbsp&nbsp星期X&nbsp&nbsp第X大节</h3>
+              <a href="http://localhost/microCourse/public/index.php/index/home/teacherincourse" class="btn btn-default navbar-btn">开始上课</a>
+              
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
         </div>
     </div>
