--- a/application/index/view/home/studentonline.html
+++ b/application/index/view/home/studentonline.html
@@ -45,9 +45,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">设置</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/home/password">设置</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">注销</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/login/login">注销</a></li>
                 </ul>
               </li>
             </ul>
@@ -62,7 +62,7 @@
               
               <div class="alert alert-success" role="alert">当前状态：系统运行正常</div>
               <h3>时间：X年X月X日&nbsp&nbsp星期X&nbsp&nbsp第X大节</h3>
-              <a href="http://localhost/microCourse/public/index.php/index/home/studentincourse" type="button" class="btn btn-default navbar-btn">进入课堂</a>
+              <a href="http://localhost/microCourse/public/index.php/index/home/studentseat" type="button" class="btn btn-default navbar-btn">扫码进入课堂</a>
 
           
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
