--- a/application/index/view/login/register.html
+++ b/application/index/view/login/register.html
@@ -30,6 +30,16 @@
 	  <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp&nbspName&nbsp&nbsp&nbsp</span>
 	  <input type="text" class="form-control" placeholder="姓名" aria-describedby="sizing-addon1">
 	</div>
+	<br><br>	
+	<div class="input-group input-group-lg ">
+	  <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp&nbsp&nbsp&nbspSex&nbsp&nbsp&nbsp&nbsp</span>
+	  <input type="text" class="form-control" placeholder="性别" aria-describedby="sizing-addon1">
+	</div>
+	<br><br>	
+	<div class="input-group input-group-lg ">
+	  <span class="input-group-addon" id="sizing-addon1">&nbsp&nbsp&nbspClass&nbsp&nbsp&nbsp</span>
+	  <input type="text" class="form-control" placeholder="班级" aria-describedby="sizing-addon1">
+	</div>
 	
 	<div class="text-center">
 		<br>	
