--- a/application/index/view/home/studentcourse.html
+++ b/application/index/view/home/studentcourse.html
@@ -45,9 +45,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">设置</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/home/password">设置</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">注销</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/login/login">注销</a></li>
                 </ul>
               </li>
             </ul>
