--- a/application/index/view/home/studentpage.html
+++ b/application/index/view/home/studentpage.html
@@ -45,9 +45,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">设置</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/home/password">设置</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">注销</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/login/login">注销</a></li>
                 </ul>
               </li>
             </ul>
@@ -60,9 +60,9 @@
             {block name="search"}
             <hr />
               <div class="jumbotron">
-                  <h1>Hello, world!</h1>
+                  <h1>微课堂-梦云智出品</h1>
                   <p>...</p>
-                  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+                  <p><a href="http://localhost/microCourse/public/index.php/index/home/aboutourteam" class="btn btn-primary btn-lg" role="button">团队概况</a></p>
               </div>
               <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
               <h3>学期名:</h3>
