--- a/application/index/view/home/studentscore.html
+++ b/application/index/view/home/studentscore.html
@@ -47,9 +47,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">您好，亲爱的同学 <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">设置</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/home/password">设置</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">注销</a></li>
+                  <li><a href="http://localhost/microCourse/public/index.php/index/login/login">注销</a></li>
                 </ul>
               </li>
             </ul>
@@ -105,8 +105,36 @@
                   </td>
                 </tr>
               </table>
-              <button type="button" class="btn btn-default navbar-btn">查询</button>
+              <a href="#" type="button" class="btn btn-default navbar-btn">查询</a>
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
+
+            </table>
+              <table class="table table-bordered">
+                <tr class="info">
+                  <th>科目</th>
+                  <th>任课教师</th>
+                  <th>平时成绩</th>
+                  <th>期末作业</th>
+                  <th>期末考试</th>
+                  <th>总成绩</th>
+                </tr>
+                <tr>
+                  <td>高等数学1B</td>
+                  <td>你猜</td>
+                  <td>29</td>
+                  <td>0</td>
+                  <td>32</td>
+                  <td>61</td>
+                </tr>
+                <tr>
+                  <td>商业网站开发</td>
+                  <td>你猜</td>
+                  <td>30</td>
+                  <td>30</td>
+                  <td>30</td>
+                  <td>90</td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
