--- a/application/index/view/home/adminpage.html
+++ b/application/index/view/home/adminpage.html
@@ -57,7 +57,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">设置</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="http://localhost/microCourse/public/index.php/index/login/login">注销</a></li>
+                  <li><a href="#">注销</a></li>
                 </ul>
               </li>
             </ul>
