--- a/application/index/view/home/adminpage.html
+++ b/application/index/view/home/adminpage.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-<!--刘宇轩-->
-<!--2019.07.19 14:55-->
+<!-- 刘宇轩 -->
+<!-- 2019.07.19 14:55 -->
+<!-- limeina1 -->
+<!-- 2019.08.09 17:15 -->
 
 <head>
     <meta charset="UTF-8">
@@ -26,32 +28,20 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">微课堂</a>
+          <a class="navbar-brand" href="http://localhost/microCourse/public/index.php/index/home/adminpage">微课堂</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav ">
-              <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
-              <!--是这个标签是当前标签 -->
-              <li><a href="#">学期控制</a></li>
-              <li><a href="#">教师管理</a></li>
-              <li><a href="#">学生管理</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
+              <!-- 这个标签是当前标签 -->
+              <li class="active"><a href="http://localhost/microCourse/public/index.php/index/home/adminpage">首页<span class="sr-only">(current)</span></a></li>
+              <li><a href="http://localhost/microCourse/public/index.php/index/home/adminterm">学期控制</a></li>
+              <li><a href="http://localhost/microCourse/public/index.php/index/home/adminteacher">教师管理</a></li>
+              <li><a href="http://localhost/microCourse/public/index.php/index/home/adminstudent">学生管理</a></li>
+              <li><a href="http://localhost/microCourse/public/index.php/index/home/adminclassroom">教室管理</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Link</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">管理员模式<span class="caret"></span></a>
                 <ul class="dropdown-menu">
