--- a/application/index/view/home/adminclassroom.html
+++ b/application/index/view/home/adminclassroom.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-<!-- 管理员界面——学期控制 -->
-<!-- 刘宇轩 -->
-<!-- 2019.07.19 14:55 -->
-<!-- limeina -->
-<!-- 2019.08.09 09：20 -->
+<!-- 管理员界面——教室管理添加 -->
+<!-- limeina1 -->
+<!-- 2019.08.09 20：47 -->
 
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}微课堂-管理员模式{/block}</title>
+    <title>微课堂-梦云智出品</title>
     <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
@@ -34,11 +32,11 @@
             <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav ">
                     <li><a href="http://localhost/microCourse/public/index.php/index/home/adminpage">首页</a></li>
-                    <!-- 这个标签是当前标签 -->
-                    <li class="active"><a href="http://localhost/microCourse/public/index.php/index/home/adminterm">学期控制<span class="sr-only">(current)</span></a></li>
+                    <li><a href="http://localhost/microCourse/public/index.php/index/home/adminterm">学期控制</a></li>
                     <li><a href="http://localhost/microCourse/public/index.php/index/home/adminteacher">教师管理</a></li>
                     <li><a href="http://localhost/microCourse/public/index.php/index/home/adminstudent">学生管理</a></li>
-                    <li><a href="http://localhost/microCourse/public/index.php/index/home/adminclassroom">教室管理</a></li>
+                    <!-- 这个标签是当前标签 -->
+                    <li class="active"><a href="http://localhost/microCourse/public/index.php/index/home/adminclassroom">教室管理<span class="sr-only">(current)</span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
@@ -59,49 +57,54 @@
         <div class="col-md-12">
             {block name="search"}
             <hr />
-            <!--  表前查询 -->
-            <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
+            <div class="alert alert-success" role="alert">当前状态：系统运行正常</div>
             <div class="row">
                 <div class="col-md-8">
                     <form class="form-inline">
                         <div class="form-group">
-                            <label class="sr-only" for="name">学期名称</label>
-                            <input type="text" class="form-control" placeholder="学期名称...">
+                            <label class="sr-only" for="name">教室区域 </label>
+                            <input type="name" class="form-control" placeholder="教室区域...">
+                            <label class="sr-only" for="name">教室名称</label>
+                            <input type="name" class="form-control" placeholder="教室名称...">
                         </div>
                         <button type="submit" class="btn btn-default">&nbsp;查询</button>
                     </form>
                 </div>
                 <div class="col-md-4 text-right">
-                    <a class="btn btn-primary" href="http://localhost/microCourse/public/index.php/index/home/admintermadd">&nbsp;增加</a>
+                    <a class="btn btn-primary" href="http://localhost/microCourse/public/index.php/index/home/adminclassroomadd">&nbsp;增加</a>
                 </div>
             </div>
             <hr />
-            <!-- 学期表格 -->
-            <table class="table  table-bordered">
+            <table class="table table-bordered">
                 <tr class="info">
-                    <th>序号</th>
-                    <th>学期名称</th>
-                    <th>起始时间</th>
-                    <th>结束时间</th>
-                    <th>学期长度</th>
-                    <th>状态</th>
-                    <th>当前周次</th>
+                    <th>教室区域</th>
+                    <th>教室名称</th>
+                    <th>行数</th>
+                    <th>列数</th>
                     <th>操作</th>
                 </tr>
                 <tr>
-                    <td>1</td>
-                    <td>2019春季</td>
-                    <td>2019年2月24日</td>
-                    <td>2019年7月7日</td>
-                    <td>19周</td>
-                    <td>已激活</td>
-                    <td>19周</td>
+                    <td>A</td>
+                    <td>203</td>
+                    <td>5</td>
+                    <td>6</td>
                     <td>
-                        <a class="btn btn-primary" href="http://localhost/microCourse/public/index.php/index/home/admintermedit">&nbsp;编辑</a>
+                        <a class="btn btn-primary" href="http://localhost/microCourse/public/index.php/index/home/adminclassroomedit">&nbsp;编辑</a>
+                        <a class="btn btn-danger">&nbsp;删除</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>五教</td>
+                    <td>106</td>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>
+                        <a class="btn btn-primary" href="http://localhost/microCourse/public/index.php/index/home/adminclassroomedit">&nbsp;编辑</a>
                         <a class="btn btn-danger">&nbsp;删除</a>
                     </td>
                 </tr>
             </table>
+            <br><br>
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
         </div>
     </div>
