--- a/application/index/view/home/studentcoursetime.html
+++ b/application/index/view/home/studentcoursetime.html
@@ -59,60 +59,71 @@
       <div class="col-md-12">
             {block name="search"}
             <hr />
-              
               <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
-              <h3>学期名:</h3>
-              <table>
-                <tr>
-                  <th><h4>选择周次:&nbsp&nbsp</h4></th>
-                  <td>
-                    <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  第一周
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#">第一周</a></li>
-                  <li><a href="#">第二周</a></li>
-                  <li><a href="#">第三周</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">......</a></li>
-                </ul>
-              </div> 
-                  </td>
-                </tr>
-              </table>
-                          <table class="table table-bordered">
+              <h3>课程名:</h3>
+              <table class="table table-bordered">
                 <tr class="info">
-                  <th>课程名称</th>
-                  <th>课程代码</th>
-                  <th>学年</th>
-                  <th>学期</th>
-                  <th>任课教师</th>
-                  <th>课程类型</th>
-                  <th>上课时间</th>
+                  <th>节次</th>
+                  <th>星期一</th>
+                  <th>星期二</th>
+                  <th>星期三</th>
+                  <th>星期四</th>
+                  <th>星期五</th>
+                  <th>星期六</th>
+                  <th>星期日</th>
                 </tr>
                 <tr>
-                  <td>商业网站开发</td>
-                  <td>GB12341234</td>
-                  <td>2018-2019</td>
-                  <td>春季</td>
-                  <td>潘杰</td>
-                  <td>选修课</td>
-                  <td><a href="http://localhost/microCourse/public/index.php/index/home/studentcoursetime" type="button" class="btn btn-default navbar-btn">点击查看</a></td>
+                  <td>第一大节</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                 </tr>
                  <tr>
-                  <td>123</td>
-                  <td>321</td>
-                  <td>456</td>
-                  <td>654</td>
-                  <td>789</td>
-                  <td>987</td>
-                  <td><a href="http://localhost/microCourse/public/index.php/index/home/studentcoursetime" type="button" class="btn btn-default navbar-btn">点击查看</a></td>
+                  <td>第二大节</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                 </tr>
-  
+                <tr>
+                  <td>第三大节</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>第四大节</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr><tr>
+                  <td>第五大节</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
             </table>
               <br><br>
+              <a href="http://localhost/microCourse/public/index.php/index/home/studentcourse" type="button" class="btn btn-default navbar-btn">返回</a>
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
         </div>
     </div>
