--- a/application/index/view/home/teacherincourse.html
+++ b/application/index/view/home/teacherincourse.html
@@ -2,16 +2,8 @@
 <html>
 <head>
 	<title>微课堂--梦云智出品</title>
-
-	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-  <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap/css/bootstrap.min.css">
+    <!--调用bootstrap的CSS样式 -->
 </head>
 <body>
   <div class="row">
@@ -19,41 +11,36 @@
   	<img src="..." alt="..." class="img-rounded">
   </div>
   <div class="col-md-7">
+    <div class="col-md-5"></div>
+    <div class="col-md-1"><h1>讲</h1></div>
+    <div class="col-md-1"><h1>台</h1></div>
+    <div class="col-md-1"></div>
+    <div class="col-md-4"><h1>人数:72/100</h1></div>
   	<table class="table table-striped">
         <tr>
-            <th>周次</th>
             <th></th>
-            <th></th>
-            <th>讲台</th>
-            <th></th>
-            <th></th>
+            <th>第一列</th>
+            <th>第二列</th>
+            <th>第三列</th>
+            <th>第四列</th>
+            <th>第五列</th>
+            <th>走廊</th>
+            <th>第六列</th>
+            <th>第七列</th>
+            <th>第八列</th>
+            <th>第九列</th>
+            <th>第十列</th>
+            <th>第十一列</th>
         </tr>
         <tr>
-            <td>第一排</td>
+            <th>第一排</th>
             <td></td>
             <td></td>
             <td></td>
             <td></td>
             <td></td>
-        </tr>
-        <tr>
-            <td>第二排</td>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>第三排</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>第四排</td>
             <td></td>
             <td></td>
             <td></td>
@@ -61,7 +48,14 @@
             <td></td>
         </tr>
         <tr>
-            <td>第五排</td>
+            <th>第二排</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -69,7 +63,59 @@
             <td></td>
         </tr>
         <tr>
-            <td>第六排</td>
+            <th>第三排</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>第四排</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>第五排</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th>第六排</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -77,7 +123,14 @@
             <td></td>
         </tr> 
         <tr>
-            <td>第七排</td>
+            <th>第七排</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
