--- a/application/index/view/home/teacherclassroom.html
+++ b/application/index/view/home/teacherclassroom.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>微课堂-梦云智出品</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap/css/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
 
 <body class="container">
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -84,49 +83,52 @@
               
               <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
               <h3>学期名:</h3>
-              <table>
-                <tr>
-                  <th><h4>选择课程:&nbsp&nbsp</h4></th>
-                  <td>
-                    <div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  语文
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                  <li><a href="#">语文</a></li>
-                  <li><a href="#">数学</a></li>
-                  <li><a href="#">英语</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">......</a></li>
-                </ul>
-              </div> 
-                  </td>
-                </tr>
-              </table>
+                    <hr />
+                    <div class="row">
+                      <div class="col-md-8">
+                        <form class="form-inline">
+                          <div class="form-group">
+                            <label class="sr-only" for="name">姓名</label>
+                            <input type="name" name="text" class="form-control" placeholder="教室区域（名称）..." value="{:input('ge.name')}">
+                          </div>
+                          <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;查询</button>
+                        </form>
+                      </div>
+                      <div class="col-md-4 text-right">
+                          <a href="http://localhost/microCourse/public/index.php/index/home/teacherclassroomedit" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i>&nbsp;增加</a>
+                        </div>
+                    </div>
+                    
+                    <hr />
               <table class="table table-bordered">
                 <tr class="info">
-                  <th>课程名称</th>
                   <th>教室区域</th>
                   <th>教室名称</th>
                   <th>行数</th>
                   <th>列数</th>
+                  <th>操作</th>
                 </tr>
                 <tr>
-                  <td>数学</td>
                   <td>A</td>
                   <td>203</td>
                   <td>5</td>
                   <td>6</td>
+                  <td>
+                    <a class="btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
+                    <a class="btn btn-sm btn-primary" href="http://localhost/microCourse/public/index.php/index/home/teacherclassroomedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
+                  </td>
                   
               
                 </tr>
                  <tr>
-                  <td>英语</td>
                   <td>五教</td>
                   <td>106</td>
                   <td>7</td>
                   <td>8</td>
+                  <td>
+                    <a class=" btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
+                    <a class="btn btn-sm btn-primary" href="http://localhost/microCourse/public/index.php/index/home/teacherclassroomedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
+                  </td>
                 </tr>
   
             </table>
