--- a/application/index/view/home/studentoncourse.html
+++ b/application/index/view/home/studentoncourse.html
@@ -63,6 +63,9 @@
               <div class="alert alert-success" role="alert">当前状态：系统运行正常，成功签到，正在上课，此时可以离开界面</div>
               <h3>时间：X年X月X日&nbsp&nbsp星期X&nbsp&nbsp第X大节</h3>
               <h3>教室：12教 A101</h3>
+              <h3>课程：高等数学1B</h3>
+              <h3>课程编码： 1234567</h3>
+              <h3>任课教师： 你猜啊</h3>
               <h3>姓名：刘宇轩</h3>
               <h3>学号：182511</h3>
               <button type="button" class="btn btn-default navbar-btn">举手</button>
