--- a/application/index/view/home/adminclassroomedit.html
+++ b/application/index/view/home/adminclassroomedit.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <div class="container-fluid">
         <div class="page-header">
-            <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
+            <h1 class="text-center">编辑教室<small>微课堂</small></h1>
         </div>
         <form class="form-horizontal">
             <div class="form-group">
