--- a/application/index/view/home/adminterm.html
+++ b/application/index/view/home/adminterm.html
@@ -102,6 +102,7 @@
                     <td>
                         <a class="btn btn-primary" href="http://localhost/microCourse/public/index.php/index/home/admintermedit">&nbsp;编辑</a>
                         <a class="btn btn-danger">&nbsp;删除</a>
+                        <a class="btn btn-success">冻结</a>
                     </td>
                 </tr>
             </table>
