--- a/application/index/view/home/teacherclassroomedit.html
+++ b/application/index/view/home/teacherclassroomedit.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>微课堂--梦云智出品</title>
-	<link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap/css/bootstrap.min.css">
-    <!--调用bootstrap的CSS样式 -->
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
@@ -18,13 +18,13 @@
 	</div>
 
 	<div class="input-group">
-	  <span class="input-group-addon" id="basic-addon1">教师区域</span>
-	  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+	  <span class="input-group-addon" id="basic-addon1">教室区域</span>
+	  <input type="text" class="form-control" placeholder="ClassRoomArea" aria-describedby="basic-addon1">
 	</div>
 	<br><br>
 	<div class="input-group">
 	  <span class="input-group-addon" id="basic-addon1">教室名称</span>
-	  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+	  <input type="text" class="form-control" placeholder="ClassRoomName" aria-describedby="basic-addon1">
 	</div>
 	<br><br>
 	<div class="row">
