--- a/application/index/view/home/teachercourse.html
+++ b/application/index/view/home/teachercourse.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>微课堂-梦云智出品</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap/css/bootstrap.min.css">
-    <!--调用bootstrap的CSS样式 -->
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body class="container">
@@ -12,19 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">微课堂</a>
-        </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -49,21 +36,10 @@
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teacherclassroom">教室管理</a></li>
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teacheronline">上课模式</a></li>
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teachergrade">成绩录入</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
+              
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Link</a></li>
+              
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">你好，敬爱的教师<span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -77,7 +53,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <br><br>
-    <div class="row">
+    <div class="container">
       <div class="col-md-12">
             {block name="search"}
             <hr />
@@ -90,7 +66,7 @@
                     <form class="form-inline">
                       <div class="form-group">
                         <label class="sr-only" for="name">姓名</label>
-                        <input type="name" name="text" class="form-control" placeholder="姓名..." value="{:input('ge.name')}">
+                        <input type="name" name="text" class="form-control" placeholder="名称..." value="{:input('ge.name')}">
                       </div>
                       <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>&nbsp;查询</button>
                     </form>
@@ -125,7 +101,6 @@
                 <tr class="info">
                   <th>课程名称</th>
                   <th>课程代码</th>
-                  <th>学年</th>
                   <th>学期</th>
                   <th>任课教师</th>
                   <th>课程类型</th>
@@ -135,24 +110,22 @@
                 <tr>
                   <td>商业网站开发</td>
                   <td>GB12341234</td>
-                  <td>2018-2019</td>
-                  <td>春季</td>
+                  <td>2018-2019春季</td>
                   <td>潘杰</td>
                   <td>选修课</td>
-                  <td><a href="" type="button" class="btn btn-default">点击查看</a></td>
+                  <td><a href="http://localhost/microCourse/public/index.php/index/home/teachercoursetime" type="button" class="btn btn-default">点击查看</a></td>
                   <td>
                     <a class=" btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
                     <a class="btn btn-sm btn-primary" href="http://localhost/microCourse/public/index.php/index/home/teachercourseedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
                   </td>
                 </tr>
                  <tr>
-                  <td>123</td>
-                  <td>321</td>
+                  <td>123</td>  
                   <td>456</td>
                   <td>654</td>
                   <td>789</td>
                   <td>987</td>
-                  <td><a href="" type="button" class="btn btn-default">点击查看</a></td>
+                  <td><a href="http://localhost/microCourse/public/index.php/index/home/teachercoursetime" type="button" class="btn btn-default">点击查看</a></td>
                   <td>
                     <a class=" btn btn-danger btn-sm" href=""><i class="glyphicon glyphicon-trash"></i>&nbsp;删除</a>&nbsp;
                     <a class="btn btn-sm btn-primary" href="http://localhost/microCourse/public/index.php/index/home/teachercourseedit"><i class="glyphicon glyphicon-pencil"></i>&nbsp;编辑</a>
