--- a/application/index/view/home/teachercourseedit.html
+++ b/application/index/view/home/teachercourseedit.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>微课堂--梦云智出品</title>
-	<link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap/css/bootstrap.min.css">
-    <!--调用bootstrap的CSS样式 -->
+	<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
@@ -19,35 +19,15 @@
 
 	<div class="input-group">
 	  <span class="input-group-addon" id="basic-addon1">课程名称</span>
-	  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+	  <input type="text" class="form-control" placeholder="ClassName" aria-describedby="basic-addon1">
 	</div>
 	<br><br>
 	<div class="input-group">
 	  <span class="input-group-addon" id="basic-addon1">课程代码</span>
-	  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+	  <input type="text" class="form-control" placeholder="ClassCode" aria-describedby="basic-addon1">
 	</div>
 	<br><br>
-	<div class="row">
-		<div class="col-md-3">
-			<h4>选择学年:&nbsp&nbsp</h4>
-		</div>
-		<div class="col-md-9">
-			<div class="dropdown">
-			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			    2018-2019
-			    <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			    <li><a href="#">2018-2019</a></li>
-			    <li><a href="#">2019-2020</a></li>
-			    <li><a href="#">2020-2021</a></li>
-			    <li role="separator" class="divider"></li>
-			    <li><a href="#">...</a></li>
-			  </ul>
-		   </div>
-		</div>
-	</div>
-	<br>
+	
 	<div class="row">
 		<div class="col-md-3">
 			<h4>选择学期:</h4>
@@ -55,12 +35,12 @@
 		<div class="col-md-9">
 			<div class="dropdown">
 			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			    秋季
+			    2018-2019秋季
 			    <span class="caret"></span>
 			  </button>
 			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			    <li><a href="#">春季</a></li>
-			    <li><a href="#">秋季</a></li>
+			    <li><a href="#">2018-2019春季</a></li>
+			    <li><a href="#">2018-2019秋季</a></li>
 			  </ul>
 		   </div>
 		</div>
