--- a/application/index/view/home/teacherincourse2.html
+++ b/application/index/view/home/teacherincourse2.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <div class="row">
-  <div class="col-md-2">
-  </div>
-  <div class="col-md-3">
-    <img herf="/microCourse/public/static/code.png" src="/microCourse/public/static/code.png" alt="..." class="img-rounded">
+  <div class="col-md-5">
+    <a href="http://localhost/microCourse/public/index.php/index/home/teacheronline" class="btn btn-default navbar-btn">随机点名</a>
+    <a href="http://localhost/microCourse/public/index.php/index/home/teacheronline" class="btn btn-default navbar-btn">下课</a>
+  	<img src="..." alt="..." class="img-rounded">
   </div>
   <div class="col-md-7">
     <div class="col-md-5"></div>
@@ -36,7 +36,7 @@
         </tr>
         <tr>
             <th>第一排</th>
-            <td></td>
+            <td>刘宇轩</td>
             <td></td>
             <td></td>
             <td></td>
@@ -57,7 +57,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
+            <td>刘宇轩</td>
             <td></td>
             <td></td>
             <td></td>
@@ -77,7 +77,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
+            <td>刘宇轩</td>
         </tr>
         <tr>
             <th>第四排</th>
@@ -140,7 +140,7 @@
             <td></td>
         </tr>    
     </table>
-    <a href="http://localhost/microCourse/public/index.php/index/home/teacherincourse2" class="btn btn-default navbar-btn">完成</a>
+    
   </div>
 </div>
 </body>
