--- a/application/index/view/home/teacherpage.html
+++ b/application/index/view/home/teacherpage.html
@@ -6,8 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{block name="title"}微课堂-管理员模式{/block}</title>
-    <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap/css/bootstrap.min.css">
-    <!--调用bootstrap的CSS样式 -->
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 
 <body class="container">
@@ -38,21 +38,10 @@
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teacherclassroom">教室管理</a></li>
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teacheronline">上课模式</a></li>
               <li><a href="http://localhost/microCourse/public/index.php/index/home/teachergrade">成绩录入</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
+              
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Link</a></li>
+              
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">你好，敬爱的教师<span class="caret"></span></a>
                 <ul class="dropdown-menu">
@@ -71,9 +60,9 @@
             {block name="search"}
             <hr />
               <div class="jumbotron">
-                  <h1>Hello, world!</h1>
+                  <h1>微课堂-梦云智出品</h1>
                   <p>...</p>
-                  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+                  <p><a href="http://localhost/microCourse/public/index.php/index/home/aboutourteam" class="btn btn-primary btn-lg" role="button">团队概况</a></p>
               </div>
               <div class="alert alert-success" role="alert">激活学期已结束或未开始</div>
               <h3>当前学期:</h3>
@@ -94,69 +83,65 @@
               <br><br>
             <table class="table table-bordered">
                 <tr class="info">
-                  <th>周次</th>
-                  <th>第一节</th>
-                  <th>第二节</th>
-                  <th>第三节</th>
-                  <th>第四节</th>
-                  <th>第五节</th>
+                    <th>节次&nbsp;\&nbsp;星期</th>
+                    <th>星期一</th>
+                    <th>星期二</th>
+                    <th>星期三</th>
+                    <th>星期四</th>
+                    <th>星期五</th>
+                    <th>星期六</th>
+                    <th>星期日</th>
                 </tr>
                 <tr>
-                  <td>星期一</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                 <tr>
-                  <td>星期二</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                    <td>第一节</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                  <td>星期三</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                    <td>第二节</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                  <td>星期四</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                    <td>第三节</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                  <td>星期五</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                    <td>第四节</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                  <td>星期六</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr> 
-                <tr>
-                  <td>星期日</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>    
+                    <td>第五节</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </table>
             <hr /> {/block} {block name="content"} {/block} {block name="page"} {/block}
         </div>
