--- a/application/index/view/admin/classroomadd.html
+++ b/application/index/view/admin/classroomadd.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="zh-cn">
-<!-- 管理员界面——教室管理编辑 -->
+<!-- 管理员界面——教室管理添加 -->
 <!-- limeina1 -->
-<!-- 2019.08.09 21：41 -->
+<!-- 2019.08.09 21：36 -->
 
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}教室管理-编辑{/block}</title>
+    <title>{block name="title"}教室管理-添加{/block}</title>
     <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
@@ -18,37 +19,37 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <div class="container-fluid">
         <div class="page-header">
-            <h1 class="text-center">编辑教室<small>微课堂</small></h1>
+            <h1 class="text-center">添加教室<small>微课堂</small></h1>
         </div>
-        <form class="form-horizontal">
+        <form class="form-horizontal" action="classroominsert" method="post">
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">教室区域:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="教室区域...">
+                    <input type="text" class="form-control" name="classroomplace" placeholder="教室区域...">
                 </div>
             </div>
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">教室名称:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="教室名称...">
+                    <input type="text" class="form-control" name="classroomname" placeholder="教室名称...">
                 </div>
             </div>
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">行数:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="行数...">
+                    <input type="text" class="form-control" name="row" placeholder="行数...">
                 </div>
             </div>
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">列数:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="列数...">
+                    <input type="text" class="form-control" name="column" placeholder="列数...">
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-default">保存</button>
-                </div> 
+                </div>
             </div>
         </form>
     </div>
