--- a/application/index/view/admin/termadd.html
+++ b/application/index/view/admin/termadd.html
@@ -20,23 +20,29 @@
         <div class="page-header">
             <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
         </div>
-        <form class="form-horizontal">
+        <form class="form-horizontal" action="terminsert" method="post">
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">学期名称:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="学期名称...">
+                    <input type="text" class="form-control" name="name" placeholder="学期名称...">
                 </div>
             </div>
             <div class="form-group">
                 <label for="startDate" class="col-sm-2 control-label">学期开始时间:</label>
                 <div class="col-sm-10">
-                    <input type="date" class="form-control" id="startDate">
+                    <input type="date" class="form-control" name="start">
                 </div>
             </div>
             <div class="form-group">
                 <label for="endDate" class="col-sm-2 control-label">学期结束时间:</label>
                 <div class="col-sm-10">
-                    <input type="date" class="form-control" id="endDate">
+                    <input type="date" class="form-control" name="end">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="endDate" class="col-sm-2 control-label">学期长度</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="length">
                 </div>
             </div>
             <div class="form-group">
