--- a/application/index/view/admin/termedit.html
+++ b/application/index/view/admin/termedit.html
@@ -1,12 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="zh-cn">
-<!-- 管理员界面——教室管理添加 -->
+<!-- 管理员界面——学期管理编辑 -->
 <!-- limeina1 -->
-<!-- 2019.08.09 21：36 -->
+<!-- 2019.08.09 18：31 -->
 
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}教室管理-添加{/block}</title>
+    <title>{block name="title"}教师管理-编辑{/block}</title>
     <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
@@ -18,31 +19,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <div class="container-fluid">
         <div class="page-header">
-            <h1 class="text-center">添加教室<small>微课堂</small></h1>
+            <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
         </div>
-        <form class="form-horizontal">
+        <form class="form-horizontal" action="termupdate" method="post">
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">教室区域:</label>
+                <label for="name" class="col-sm-2 control-label">学期名称:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="教室区域...">
+                    <input type="hidden" name="id" value="{$Term->getData('id')}" />
+                    <input type="text" class="form-control" name="name" value="{$Term->getData('name')}">
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">教室名称:</label>
+                <label for="startDate" class="col-sm-2 control-label">学期开始时间:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="教室名称...">
+                    <input type="date" class="form-control" name="start" value="{$Term->getData('start')}">
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">行数:</label>
+                <label for="endDate" class="col-sm-2 control-label">学期结束时间:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="行数...">
+                    <input type="date" class="form-control" name="end" value="{$Term->getData('end')}">
                 </div>
             </div>
             <div class="form-group">
-                <label for="name" class="col-sm-2 control-label">列数:</label>
+                <label for="endDate" class="col-sm-2 control-label">学期长度</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="列数...">
+                    <input type="text" class="form-control" name="length" value="{$Term->getData('length')}">
                 </div>
             </div>
             <div class="form-group">
