--- a/application/index/view/admin/teacheredit.html
+++ b/application/index/view/admin/teacheredit.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
-<!-- 管理员界面——教师管理添加 -->
+<!-- 管理员界面——教师管理编辑 -->
 <!-- limeina1 -->
-<!-- 2019.08.09 20：04 -->
+<!-- 2019.08.09 20：40 -->
 
 <head>
     <meta charset="UTF-8">
-    <title>{block name="title"}教师管理-添加{/block}</title>
+    <title>{block name="title"}教师管理-编辑{/block}</title>
     <link rel="stylesheet" type="text/css" href="/microCourse/public/static/bootstrap.min.css">
     <!--调用bootstrap的CSS样式 -->
 </head>
@@ -20,23 +20,33 @@
         <div class="page-header">
             <h1 class="text-center">微课堂 <small>梦云智出品</small></h1>
         </div>
-        <form class="form-horizontal">
+        <form class="form-horizontal" action="{:url('teacherupdate')}" method="post">
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">姓名:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="姓名...">
+                    <input type="hidden" name="id" value="{$Teacher->getData('id')}" />
+                    <input type="text" class="form-control" id="name" value="{$Teacher->getData('name')}" name="name" />
                 </div>
             </div>
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">工号:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="工号...">
+                    <input type="text" class="form-control" id="name" value="{$Teacher->getData('num')}" name="num" />
                 </div>
             </div>
             <div class="form-group">
                 <label for="name" class="col-sm-2 control-label">性别:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name" placeholder="性别...">
+                    <select name="sex" class="form-control">
+                        <option value="0">男</option>
+                        <option value="1" {eq name="Teacher->getData('sex')" value="1"}selected="selected"{/eq}>女</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="name" class="col-sm-2 control-label">密码：</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name" value="{$Teacher->getData('num')}" name="password" />
                 </div>
             </div>
             <div class="form-group">
